<resources>
    <string name="app_name">Quiz</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="profile">Profile</string>
    <string name="enter_your_profile_name">enter your profile name</string>
    <string name="tap_to_choose_profile">Tap to choose profile</string>
    <string name="swipe_right_to_delete">Swipe right to delete</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="developer_option">Developer Option</string>
    <string name="off">OFF</string>
    <string name="delete">Delete</string>
    <string name="enter_profile_name">Enter profile name</string>
    <string name="create">Create</string>
    <string name="score">Score</string>
    <string name="quiz_nepal">Quiz Nepal</string>

</resources>
