<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D855E7FA"
    tools:context=".Settings"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button_manageProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="105dp"
        android:onClick="onManageProfileClick"
        android:text="@string/developer_option"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_Sound" />

    <Button
        android:id="@+id/button_Sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="1dp"
        android:onClick="onSoundClick"
        android:text="@string/sound"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Sound"
        app:layout_constraintEnd_toStartOf="@+id/textView_Sound"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_Sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/off"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_manageProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_Sound" />

    <TextView
        android:id="@+id/textView_Music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/off"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_Sound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_Music" />

    <Button
        android:id="@+id/button_Music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="1dp"
        android:onClick="onMusicClick"
        android:text="@string/music"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Music"
        app:layout_constraintEnd_toStartOf="@+id/textView_Music"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>